0.27 

  Took out the last "exit" call from the SMTP object; the "transport"
  module ("TcpServer", "SelectServer") needs to do the right thing in
  it's disconnect method.

  Update the SPF plugin (Philip Gladstone, philip@gladstonefamily.net):
   * Integrated with Mail::SPF::Query 1.991
   * Don't do SPF processing when you are acting as a relay system
   * Remove the MX changes as they are now inside Mail::SPF::Query

  Take out Data::Dumper to save a few bytes of memory

  Say Received: ... via ESMTP instead of via SMTP when the client
  speaks ESMTP.  (Hoping this can be a useful SpamAssassin rule).

  Take out the X-SMTPD header. 

  Add pod documentation and sanity checking of the config to
  check_badmailfrom

  Use $ENV{QMAIL} to override /var/qmail for where to find the
  control/ directory.

  Enable "check_earlytalker" in the default plugins config

  Added a milter plugin to allow use of sendmail milters

  Don't store the Qpsmtpd object in the Plugin object any more (this
  caused a circular reference)

  Added a new qpsmtpd-server - a select() based server for qpsmtpd

  Allow a config/relayclients and config/morerelayclients files to
  define who can relay (useful with the select() server)

  Fixed qpsmtpd unfolding all header lines

  Speed up persistent qpsmtpd's by checking for plugin functions after
  munging the name (the main breakage was with queue/qmail-queue)

  Use dup2() instead of perl open("<&") style. POSIX seems to work better.

  [.. todo, fill in older changes ..] spf changes etc?

0.26 - 2003/06/11

  Add queue/smtp-forward plugin (Matt Sergeant)

  Add documentation to Qpsmtpd::Transaction (Matt Sergeant)

  Fix bug in dnsbl that made it sometimes ignore "hits" (thanks to
  James H. Thompson <jht@lava.net>)

  Fix bug hiding the error message when an existing configuration file
  isn't readable.

  If a plugin running the ehlo hook add something to the ARRAY
  reference $self->transaction->notes('capabilities') then it will be